--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.InstaRupee">
-        <activity android:name=".ProductActivity"></activity>
+        <activity android:name=".ManageProfileActivity"></activity>
+        <activity android:name=".ProductActivity" />
         <activity android:name=".PublishAddActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".SignUpActivity" />
